Collate and refactor

--- a/collated/test/A0140887W.md
+++ b/collated/test/A0140887W.md
@@ -51,10 +51,41 @@ public class ChangeThemeTest extends DoistGUITest {
     }
 }
 ```
-###### \java\guitests\FinishCommandTest.java
+###### \java\guitests\EditCommandTest.java
 ``` java
-public class FinishCommandTest extends DoistGUITest {
+    /**
+     * Checks whether the edited task has the correct updated details.
+     *
+     * @param filteredTaskListIndex index of task to edit in filtered list
+     * @param todoListIndex index of task to edit in the todo list.
+     *      Must refer to the same task as {@code filteredTaskListIndex}
+     * @param detailsToEdit details to edit the task with as input to the edit command
+     * @param editedTask the expected task after editing the task's details
+     * @param isFindAndDisappear true if edit is done after a find and thus task will disappear after editing
+     */
+    private void assertEditSuccess(int filteredTaskListIndex, int todoListIndex,
+                                    String detailsToEdit, TestTask editedTask, boolean isFindAndDisappear) {
+        commandBox.runCommand("edit " + filteredTaskListIndex + " " + detailsToEdit);
 
+        if (!isFindAndDisappear) {
+            // confirm the new card contains the right data
+            TaskCardHandle editedCard = taskListPanel.navigateToTask(editedTask.getDescription().desc);
+            assertMatching(editedTask, editedCard);
+
+            // confirm the list now contains all previous tasks plus the task with updated details
+            expectedTasks[todoListIndex - 1] = editedTask;
+            assertTrue(taskListPanel.isListMatching(expectedTasks));
+            assertResultMessage(String.format(EditCommand.MESSAGE_EDIT_TASK_SUCCESS, editedTask));
+        } else {
+            // Task is supposed to not exist after editing because of find
+            try {
+                TaskCardHandle editedCard = taskListPanel.navigateToTask(editedTask.getDescription().desc);
+                fail();
+            } catch (IllegalStateException e) {
+                return;
+            }
+        }
+    }
 ```
 ###### \java\guitests\FinishCommandTest.java
 ``` java
@@ -104,9 +135,39 @@ public class FinishCommandTest extends DoistGUITest {
         return getDesc().equals(task.getDescription().desc)
                 && getPriority().equals(task.getPriority().toString())
                 && getFinishStatus() == task.getFinishedStatus().getIsFinished()
-                //&& getStartTime().equals(task.getStartDate().toString())
-                //&& getEndTime().equals(task.getEndDate().toString())
+                && hasEqualTime(task)
                 && cardTags.equals(taskTags);
+    }
+
+    /**
+     * Returns true if the task has the same times as this taskcard
+     * @param task the task to compare this task card to
+     */
+    private boolean hasEqualTime(ReadOnlyTask task) {
+        final String startTimeText = "Start: ";
+        final String endTimeText = "End: ";
+        final String byTimeText = "By: ";
+
+        if (task.getDates().isDeadline()) {
+            return (getStartTime().equals(byTimeText + prettyDate(task.getDates().getStartDate()))
+                    && getEndTime().equals(""));
+        } else if (task.getDates().isEvent()) {
+            return (getStartTime().equals(startTimeText + prettyDate(task.getDates().getStartDate()))
+                    && getEndTime().equals(endTimeText + prettyDate(task.getDates().getEndDate())));
+        } else {
+            // floating task
+            return (getStartTime().equals("") && getEndTime().equals(""));
+        }
+    }
+
+```
+###### \java\guitests\ListCommandTest.java
+``` java
+    private void assertListOverdue() {
+        List<ReadOnlyTask> displayedList = taskListPanel.getListView().getItems();
+        for (ReadOnlyTask task : displayedList) {
+            assertTrue(!task.getFinishedStatus().getIsFinished() && task.getDates().isPast());
+        }
     }
 
 ```
@@ -151,7 +212,6 @@ public class LoadCommandTest extends DoistGUITest {
 
     private void assertLoadSuccess(String path, ReadOnlyTodoList loadedList) {
         commandBox.runCommand("load " + path);
-
         //confirm the list now contains the loaded tasks
         ReadOnlyTask[] expectedList = loadedList.getTaskList()
                 .toArray(new ReadOnlyTask[loadedList.getTaskList().size()]);
@@ -281,6 +341,41 @@ public class UnfinishCommandTest extends DoistGUITest {
     }
 
 }
+```
+###### \java\seedu\doist\logic\LogicManagerTest.java
+``` java
+    /**
+     * Executes the command, confirms that the result message is correct
+     * and that a CommandException is thrown if expected
+     * and also confirms that the following three parts of the LogicManager object's state are as expected:<br>
+     *      - the internal todo list data are same as those in the {@code expectedTodoList} <br>
+     *      - the backing list shown by UI matches the {@code shownList} <br>
+     *      - {@code expectedTodoList} was saved to the storage file. (Does not check this if its a find command)<br>
+     */
+    private void assertCommandBehavior(boolean isCommandExceptionExpected, String inputCommand, String expectedMessage,
+                                       ReadOnlyTodoList expectedTodoList,
+                                       List<? extends ReadOnlyTask> expectedShownList, boolean isFind) {
+
+        try {
+            CommandResult result = logic.execute(inputCommand);
+            assertFalse("CommandException expected but was not thrown.", isCommandExceptionExpected);
+            assertEquals(expectedMessage, result.feedbackToUser);
+        } catch (CommandException e) {
+            assertTrue("CommandException not expected but was thrown.", isCommandExceptionExpected);
+            assertEquals(expectedMessage, e.getMessage());
+        }
+
+        //Confirm the ui display elements should contain the right data
+        assertEquals(expectedShownList, new ArrayList<ReadOnlyTask>(model.getFilteredTaskList()));
+
+        //Confirm the state of data (saved and in-memory) is as expected
+        assertEquals(expectedTodoList, model.getTodoList());
+        if (!isFind) {
+            // If not find, then check saved todolist
+            assertEquals(expectedTodoList, latestSavedTodoList);
+        }
+    }
+
 ```
 ###### \java\seedu\doist\logic\parser\SaveAsParserTest.java
 ``` java
@@ -466,6 +561,119 @@ public class PriorityTest {
     }
 
 ```
+###### \java\seedu\doist\storage\StorageManagerTest.java
+``` java
+    @Test
+    public void handleAliasListMapChangedEvent_exceptionThrown_eventRaised() throws IOException {
+        // Create a StorageManager while injecting a stub that  throws an exception when the save method is called
+        Storage storage = new StorageManager(new XmlTodoListStorage("dummy"),
+                                             new XmlAliasListMapStorageExceptionThrowingStub("dummy"),
+                                             new JsonUserPrefsStorage("dummy"));
+        EventsCollector eventCollector = new EventsCollector();
+        storage.handleAliasListMapChangedEvent(new AliasListMapChangedEvent(new AliasListMap()));
+        assertTrue(eventCollector.get(0) instanceof DataSavingExceptionEvent);
+    }
+
+```
+###### \java\seedu\doist\storage\StorageManagerTest.java
+``` java
+    /**
+     * A Stub class to throw an exception when the save method for alias list map is called
+     */
+    class XmlAliasListMapStorageExceptionThrowingStub extends XmlAliasListMapStorage {
+
+        public XmlAliasListMapStorageExceptionThrowingStub(String filePath) {
+            super(filePath);
+        }
+
+        @Override
+        public void saveAliasListMap(ReadOnlyAliasListMap todoList, String filePath) throws IOException {
+            throw new IOException("dummy exception");
+        }
+    }
+
+}
+```
+###### \java\seedu\doist\storage\XmlAliasListMapStorageTest.java
+``` java
+public class XmlAliasListMapStorageTest {
+    private static final String TEST_DATA_FOLDER = FileUtil.getPath("./src/test/data/XmlAliasListMapStorageTest/");
+
+    @Rule
+    public ExpectedException thrown = ExpectedException.none();
+
+    @Rule
+    public TemporaryFolder testFolder = new TemporaryFolder();
+
+    @Test
+    public void readAliasListMap_nullFilePath_assertionFailure() throws Exception {
+        thrown.expect(AssertionError.class);
+        readAliasListMap(null);
+    }
+
+    private java.util.Optional<ReadOnlyAliasListMap> readAliasListMap(String filePath) throws Exception {
+        return new XmlAliasListMapStorage(filePath).readAliasListMap(addToTestDataPathIfNotNull(filePath));
+    }
+
+    private String addToTestDataPathIfNotNull(String prefsFileInTestDataFolder) {
+        return prefsFileInTestDataFolder != null
+                ? TEST_DATA_FOLDER + prefsFileInTestDataFolder
+                : null;
+    }
+
+    @Test
+    public void read_missingFile_emptyResult() throws Exception {
+        assertFalse(readAliasListMap("NonExistentFile.xml").isPresent());
+    }
+
+    @Test
+    public void read_notXmlFormat_exceptionThrown() throws Exception {
+
+        thrown.expect(DataConversionException.class);
+        readAliasListMap("NotXmlFormatAliasListMap.xml");
+    }
+
+    @Test
+    public void readAndSaveTodoList_allInOrder_success() throws Exception {
+        String filePath = testFolder.getRoot().getPath() + "TempAliasListMap.xml";
+        AliasListMap original = new AliasListMap();
+        XmlAliasListMapStorage xmlAliasListMapStorage = new XmlAliasListMapStorage(filePath);
+
+        //Save in new file and read back
+        xmlAliasListMapStorage.saveAliasListMap(original, filePath);
+        ReadOnlyAliasListMap readBack = xmlAliasListMapStorage.readAliasListMap(filePath).get();
+        assertEquals(original, new AliasListMap(readBack));
+
+        //Modify data, overwrite exiting file, and read back
+        original.setAlias("hello", "add");
+        xmlAliasListMapStorage.saveAliasListMap(original, filePath);
+        readBack = xmlAliasListMapStorage.readAliasListMap(filePath).get();
+        assertEquals(original, new AliasListMap(readBack));
+
+        //Save and read without specifying file path
+        original.setAlias("goodbye", "add");
+        xmlAliasListMapStorage.saveAliasListMap(original); //file path not specified
+        readBack = xmlAliasListMapStorage.readAliasListMap().get(); //file path not specified
+        assertEquals(original, new AliasListMap(readBack));
+    }
+
+    @Test
+    public void saveAliasListMap_nullTodoList_assertionFailure() throws IOException {
+        thrown.expect(AssertionError.class);
+        saveAliasListMap(null, "SomeFile.xml");
+    }
+
+    private void saveAliasListMap(ReadOnlyAliasListMap aliasListMap, String filePath) throws IOException {
+        new XmlAliasListMapStorage(filePath).saveAliasListMap(aliasListMap, addToTestDataPathIfNotNull(filePath));
+    }
+
+    @Test
+    public void saveAliasListMap_nullFilePath_assertionFailure() throws IOException {
+        thrown.expect(AssertionError.class);
+        saveAliasListMap(new AliasListMap(), null);
+    }
+}
+```
 ###### \java\seedu\doist\TestApp.java
 ``` java
     @Override
@@ -478,6 +686,88 @@ public class PriorityTest {
         config.setUserPrefsFilePath(DEFAULT_PREF_FILE_LOCATION_FOR_TESTING);
         config.setTodoListName(DOIST_NAME);
         return config;
+    }
+
+```
+###### \java\seedu\doist\testutil\TestTask.java
+``` java
+/**
+ * A mutable task object. For testing only.
+ */
+public class TestTask implements ReadOnlyTask {
+
+    private Description desc;
+    private Priority priority;
+    private FinishedStatus finishedStatus;
+    private UniqueTagList tags;
+    private TaskDate dates;
+
+    public TestTask() {
+        tags = new UniqueTagList();
+        finishedStatus = new FinishedStatus();
+        priority = new Priority();
+        dates = new TaskDate();
+    }
+
+    /**
+     * Creates a copy of {@code taskToCopy}.
+     */
+    public TestTask(TestTask taskToCopy) {
+        this.desc = taskToCopy.getDescription();
+        this.priority = taskToCopy.getPriority();
+        this.finishedStatus = taskToCopy.getFinishedStatus();
+        this.tags = taskToCopy.getTags();
+        this.dates = taskToCopy.getDates();
+    }
+
+    public void setName(Description desc) {
+        this.desc = desc;
+    }
+
+    public void setPriority(Priority priority) {
+        this.priority = priority;
+    }
+
+    public void setFinishedStatus(boolean isFinished) {
+        this.finishedStatus.setIsFinished(isFinished);
+    }
+
+    public void setTags(UniqueTagList tags) {
+        this.tags = tags;
+    }
+
+    public void setDates(TaskDate dates) {
+        this.dates = dates;
+    }
+
+    @Override
+    public Description getDescription() {
+        return desc;
+    }
+
+    @Override
+    public UniqueTagList getTags() {
+        return tags;
+    }
+
+    @Override
+    public Priority getPriority() {
+        return priority;
+    }
+
+    @Override
+    public FinishedStatus getFinishedStatus() {
+        return finishedStatus;
+    }
+
+    @Override
+    public TaskDate getDates() {
+        return dates;
+    }
+
+    @Override
+    public String toString() {
+        return getAsText();
     }
 
 ```
@@ -510,4 +800,24 @@ public class PriorityTest {
         return testTasks;
     }
 
+```
+###### \java\seedu\doist\testutil\TypicalTestTasks.java
+``` java
+    /**
+     * Parse the string to Date
+     * @param dateString
+     * @return Date
+     * @throws IllegalValueException
+     */
+    public Date stringToDate(DateFormat format, String dateString) throws IllegalValueException {
+        try {
+            Date date = format.parse(dateString);
+            return date;
+        } catch (ParseException pe) {
+            logger.warning("TypicalTestTasks: Could not parse date in string \"" +
+                dateString + "\"");
+            throw new IllegalValueException(dateString + " is not a valid date");
+        }
+    }
+}
 ```
