--- a/collated/test/A0147620L.md
+++ b/collated/test/A0147620L.md
@@ -248,3 +248,172 @@ public class FindCommandTest extends DoistGUITest {
     }
 
 ```
+###### \java\guitests\ListCommandTest.java
+``` java
+    private void assertListDate(Date startDate, Date endDate) {
+        List<ReadOnlyTask> displayedList = taskListPanel.getListView().getItems();
+        for (ReadOnlyTask task : displayedList) {
+            assertValidDate(startDate, endDate, task.getDates().getStartDate(), task.getDates().getEndDate());
+        }
+    }
+
+    /** Function that checks if start and end date, overlap with the targetStart and targetEnd dates **/
+    private void assertValidDate (Date targetStart, Date targetEnd, Date startDate, Date endDate) {
+        if (startDate == null || endDate == null) {
+            assertTrue(false);
+        } else if (startDate.compareTo(targetStart) < 0 &&
+                endDate.compareTo(targetEnd) < 0) {
+            assertTrue(false);
+        } else if (startDate.compareTo(targetStart) > 0 &&
+                endDate.compareTo(targetEnd) > 0) {
+            assertTrue(false);
+        } else {
+            assertTrue(true);
+        }
+    }
+
+```
+###### \java\seedu\doist\logic\LogicManagerTest.java
+``` java
+    @Test
+    public void execute_find_onlyMatchesFullWordsInNames() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        Task pTarget1 = helper.generateTaskWithDescription("bla bla KEY bla");
+        Task pTarget2 = helper.generateTaskWithDescription("bla KEY bla bceofeia");
+        Task p1 = helper.generateTaskWithDescription("should not Match");
+        Task p2 = helper.generateTaskWithDescription("KEYKEYKEY sduauo");
+
+        List<Task> fourPersons = helper.generateTaskList(p1, pTarget1, p2, pTarget2);
+        TodoList expectedAB = helper.generateTodoList(fourPersons);
+        List<Task> expectedList = helper.generateTaskList(pTarget1, p2, pTarget2);
+        helper.addToModel(model, fourPersons);
+
+        // After the command, tasks will be auto sorted
+        expectedList.sort(new ReadOnlyTaskMatchingComparator("KEY"));
+        expectedAB.sortTasks(new ReadOnlyTaskMatchingComparator("KEY"));
+        assertCommandSuccess("find KEY",
+                Command.getMessageForTaskListShownSummary(expectedList.size()),
+                expectedAB,
+                expectedList, true);
+    }
+
+    @Test
+    public void execute_find_isNotCaseSensitive() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        Task p1 = helper.generateTaskWithDescription("bla bla KEY bla");
+        Task p2 = helper.generateTaskWithDescription("bla KEY bla bceofeia");
+        Task p3 = helper.generateTaskWithDescription("key key");
+        Task p4 = helper.generateTaskWithDescription("KEy sduauo");
+
+        List<Task> fourPersons = helper.generateTaskList(p3, p1, p4, p2);
+        TodoList expectedAB = helper.generateTodoList(fourPersons);
+        List<Task> expectedList = fourPersons;
+        helper.addToModel(model, fourPersons);
+
+        // After the command, tasks will be auto sorted
+        expectedList.sort(new ReadOnlyTaskMatchingComparator("KEY"));
+        expectedAB.sortTasks(new ReadOnlyTaskMatchingComparator("KEY"));
+        assertCommandSuccess("find KEY",
+                Command.getMessageForTaskListShownSummary(expectedList.size()),
+                expectedAB,
+                expectedList, true);
+    }
+
+    @Test
+    public void execute_find_matchesIfAnyKeywordPresent() throws Exception {
+        TestDataHelper helper = new TestDataHelper();
+        Task pTarget1 = helper.generateTaskWithDescription("bla bla KEY bla");
+        Task pTarget2 = helper.generateTaskWithDescription("bla rAnDoM bla bceofeia");
+        Task pTarget3 = helper.generateTaskWithDescription("key key");
+        Task p1 = helper.generateTaskWithDescription("sduauo");
+
+        List<Task> fourPersons = helper.generateTaskList(pTarget1, p1, pTarget2, pTarget3);
+        TodoList expectedAB = helper.generateTodoList(fourPersons);
+        List<Task> expectedList = helper.generateTaskList(pTarget1, pTarget2, pTarget3);
+        helper.addToModel(model, fourPersons);
+
+        // After the command, tasks will be auto sorted
+        expectedList.sort(new ReadOnlyTaskMatchingComparator("key rAnDoM"));
+        expectedAB.sortTasks(new ReadOnlyTaskMatchingComparator("key rAnDoM"));
+        assertCommandSuccess("find key rAnDoM",
+                Command.getMessageForTaskListShownSummary(expectedList.size()),
+                expectedAB,
+                expectedList, true);
+    }
+
+```
+###### \java\seedu\doist\testutil\TestTask.java
+``` java
+    /**Function that returns true if this task is overdue i.e, not finished and past it's deadline **/
+    public boolean isOverdue() {
+        if (this.getFinishedStatus().getIsFinished()) {
+            return false;
+        } else if (this.getDates().getStartDate() != null && this.getDates().getEndDate() != null) {
+            Date currentDate = new Date();
+            return (this.getDates().getEndDate().compareTo(currentDate) < 0);
+        } else {
+            return false;
+        }
+    }
+
+    public String getAddCommand() {
+        StringBuilder sb = new StringBuilder();
+        sb.append("add " + this.getDescription().desc + " ");
+        sb.append("\\as " + this.getPriority().toString());
+        if (!this.getTags().isEmpty()) {
+            sb.append("\\under");
+            this.getTags().asObservableList().stream().forEach(s -> sb.append(" " + s.tagName));
+        }
+        if (this.getDates().getStartDate() != null && this.getDates().getEndDate() != null) {
+            sb.append("\\from " + this.getDates().getStartDate().toString() + " \\to " +
+                    this.getDates().getEndDate().toString());
+        }
+        return sb.toString();
+    }
+}
+```
+###### \java\seedu\doist\testutil\TypicalTestTasks.java
+``` java
+public class TypicalTestTasks {
+
+    public TestTask laundry, homework, chores, work, school, groceries, shopping, email, exercise, meeting, movie;
+    private static final Logger logger = LogsCenter.getLogger(TypicalTestTasks.class);
+
+    public TypicalTestTasks() {
+        try {
+            laundry = new TaskBuilder().withName("Do laundry").build();
+            homework = new TaskBuilder().withName("Complete math homework").withTags("school", "math").build();
+            work = new TaskBuilder().withName("Schedule meeting with boss").withPriority("IMPORTANT").build();
+            school = new TaskBuilder().withName("Submit chemistry assignment").build();
+            groceries = new TaskBuilder().withName("Pick up milk").build();
+            shopping = new TaskBuilder().withName("Buy new clock").withDates(new Date(), new Date()).build();
+
+            // Manually added
+            email = new TaskBuilder().withName("Send emails to client").build();
+            exercise = new TaskBuilder().withName("Go for a run").build();
+            chores = new TaskBuilder().withName("Clean up house").withPriority("VERY IMPORTANT").build();
+            meeting = new TaskBuilder().withName("Meet coworkers").withDates(new Date(), new Date()).build();
+
+            String dateStringFrom = "Jan 1 20:29:30 2017";
+            String dateStringTo = "Jan 2 21:00:30 2017";
+            // The default medium/short DateFormat
+            DateFormat format = new SimpleDateFormat("MMM dd kk:mm:ss yyyy");
+            movie = new TaskBuilder().withName("Watch movie").withDates(stringToDate(format, dateStringFrom),
+                    stringToDate(format, dateStringTo)).build();
+        } catch (IllegalValueException e) {
+            e.printStackTrace();
+            assert false : "not possible";
+        }
+    }
+
+    public static void loadDoistWithSampleData(TodoList ab) {
+        for (TestTask task : new TypicalTestTasks().getTypicalTasks()) {
+            try {
+                ab.addTask(new Task(task));
+            } catch (UniqueTaskList.DuplicateTaskException e) {
+                assert false : "TypicalTestTasks: Sample data has duplicates";
+            }
+        }
+    }
+
+```
